--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion Picture">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning lion Picture" title="The Lazy Lion">
   </body>
 </html>
